FIX: page skipping - get_max_index

--- a/Naver_news_crawling.ipynb
+++ b/Naver_news_crawling.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "id": "971b8c16",
    "metadata": {
     "pycharm": {
@@ -45,8 +45,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "f984fd9d",
+   "execution_count": null,
+   "id": "23d2897e",
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -69,14 +69,14 @@
     "    '''\n",
     "\n",
     "    # prerequisite\n",
-    "    df = pd.DataFrame(columns=['link', 'title', 'date', 'article'])\n",
+    "    df = pd.DataFrame(columns=['naver_news_title', 'naver_news_articles'])\n",
     "\n",
     "    # index settings\n",
     "    # a single pages includes 10 news, starting from page 1 (index 1~10)\n",
     "    current_index = 1\n",
     "    max_index = 2\n",
     "\n",
-    "    while (current_index <= max_index) and (1 + current_index // 10 <= page_limit):\n",
+    "    while 1 + current_index // 10 <= page_limit:\n",
     "        url = make_url(query, sort, field, begin, end, current_index)\n",
     "        bsobj = make_bsobj(url, delay, timeout, trial=10)\n",
     "        print('making url', url)\n",
@@ -94,26 +94,51 @@
     "            naver_news_articles.append(naver_news_article)\n",
     "\n",
     "#             date, article, title, newspaper = attributes\n",
-    "        df = pd.DataFrame([ x for x in zip(naver_news_title, naver_news_articles)])\n",
-    "        df.columns = ['naver_news_title', 'naver_news_articles']\n",
+    "        df_s = pd.DataFrame([ x for x in zip(naver_news_title, naver_news_articles)])\n",
+    "        df_s.columns = ['naver_news_title', 'naver_news_articles']\n",
+    "        df = pd.concat([df, df_s], ignore_index=True)\n",
     "#         df = df.sort_values(by=['date'])\n",
     "        df.to_excel(save_as, engine='xlsxwriter')\n",
+    "\n",
+    "        print('updating current_news_index info')\n",
     "        current_index += 10\n",
-    "    \n",
     "        max_index = get_max_index(bsobj)\n",
+    "        print(max_index)\n",
     "        if max_index is None:\n",
+    "            print('out of max index')\n",
     "            break\n",
-    "        if len(df) > 50:\n",
-    "            break\n",
-    "        \n",
-    "    print(f'{begin}_complete!')\n",
-    "    return df"
+    "    print(f'{begin}_complete!')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "0db9def4",
+   "execution_count": 3,
+   "id": "938e8942",
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "def get_max_index(bsobj):\n",
+    "    paging = bsobj.find(\"a\", {\"class\": \"btn_next\"})\n",
+    "    val = 'onclick' in str(paging)\n",
+    "    atags = bsobj.find_all('a', 'news_tit')\n",
+    "    if not val:\n",
+    "        print('(WARNING!) no results found')\n",
+    "        return None\n",
+    "    if not atags:\n",
+    "        print('(WARNING!) there is only one page')\n",
+    "        return None\n",
+    "    \n",
+    "    return len(atags)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "443eba51",
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -144,8 +169,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "f98e7aa6",
+   "execution_count": 5,
+   "id": "469246d0",
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -161,14 +186,13 @@
     "    url += \"&nso=so:r,p:\"\n",
     "    url += \"from\" + begin.replace(\".\", \"\") + \"to\" + end.replace(\".\", \"\")\n",
     "    url += \"&start=\" + str(page)\n",
-    "    url += \"&refresh_start=0\"\n",
     "    return url"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "260ef478",
+   "execution_count": 6,
+   "id": "6b8a287e",
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -196,42 +220,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
-   "id": "4a70bc0a",
+   "execution_count": 7,
+   "id": "0f8aecdf",
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [],
-   "source": [
-    "def get_max_index(bsobj):\n",
-    "    paging = bsobj.find_all('a', 'btn_next')\n",
-    "    print(paging)\n",
-    "    if not paging:\n",
-    "        print('(WARNING!) no results found')\n",
-    "        return None\n",
-    "    print(1)\n",
-    "    return True"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 56,
-   "id": "9bb80efe",
-   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[<a aria-disabled=\"false\" class=\"btn_next\" href=\"?where=news&amp;sm=tab_pge&amp;query=%EC%A0%9C%EC%A3%BC%EB%8F%84%EA%B4%80%EA%B4%91&amp;sort=0&amp;photo=0&amp;field=1&amp;pd=3&amp;ds=2015.01.01&amp;de=2015.01.30&amp;cluster_rank=13&amp;mynews=0&amp;office_type=0&amp;office_section_code=0&amp;news_office_checked=&amp;nso=so:r,p:from20150101to20150130,a:t&amp;start=11\" onclick=\"return goOtherCR(this, 'a=nws.paging&amp;r=2&amp;u='+urlencode(urlexpand(this.href)));\" role=\"button\"><i class=\"spnew ico_page_arr\">다음</i></a>]\n",
+      "(WARNING!) no results found\n",
       "1\n"
      ]
     }
    ],
    "source": [
-    "url = 'https://search.naver.com/search.naver?&where=news&query=%EC%A0%9C%EC%A3%BC%EB%8F%84%EA%B4%80%EA%B4%91&sort=0&field=1&ds=2015.01.01&de=2015.01.30&nso=so:r,p:from20150101to20150130&start=1&refresh_start=21'\n",
+    "url = 'https://search.naver.com/search.naver?where=news&sm=tab_pge&query=%EC%A0%9C%EC%A3%BC%EB%8F%84%EA%B4%80%EA%B4%91&sort=0&photo=0&field=1&pd=3&ds=2015.01.01&de=2015.01.30&cluster_rank=13&mynews=0&office_type=0&office_section_code=0&news_office_checked=&nso=so:r,p:from20150101to20150130,a:t&start=11'\n",
     "delay=0.5\n",
     "timeout=30\n",
     "bsobj = make_bsobj(url, delay, timeout, trial=10)\n",
@@ -242,8 +249,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "a0ba3b5c",
+   "execution_count": 8,
+   "id": "87587c57",
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -264,8 +271,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "062f913c",
+   "execution_count": 9,
+   "id": "94f31104",
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -284,8 +291,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "0c5e2f92",
+   "execution_count": 10,
+   "id": "ab3ba7a4",
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -303,61 +310,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "id": "ff9e38dd",
+   "execution_count": null,
+   "id": "573e2c75",
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "making url https://search.naver.com/search.naver?&where=news&query=%EC%A0%9C%EC%A3%BC%EB%8F%84%EA%B4%80%EA%B4%91&sort=0&field=1&ds=2015.01.01&de=2015.01.30&nso=so:r,p:from20150101to20150130&start=1&refresh_start=0\n",
-      "2015.01.01_complete!\n",
-      "making url https://search.naver.com/search.naver?&where=news&query=%EC%A0%9C%EC%A3%BC%EB%8F%84%EA%B4%80%EA%B4%91&sort=0&field=1&ds=2015.02.01&de=2015.02.30&nso=so:r,p:from20150201to20150230&start=1&refresh_start=0\n",
-      "2015.02.01_complete!\n",
-      "making url https://search.naver.com/search.naver?&where=news&query=%EC%A0%9C%EC%A3%BC%EB%8F%84%EA%B4%80%EA%B4%91&sort=0&field=1&ds=2015.03.01&de=2015.03.30&nso=so:r,p:from20150301to20150330&start=1&refresh_start=0\n",
-      "2015.03.01_complete!\n",
-      "making url https://search.naver.com/search.naver?&where=news&query=%EC%A0%9C%EC%A3%BC%EB%8F%84%EA%B4%80%EA%B4%91&sort=0&field=1&ds=2015.04.01&de=2015.04.30&nso=so:r,p:from20150401to20150430&start=1&refresh_start=0\n",
-      "2015.04.01_complete!\n",
-      "making url https://search.naver.com/search.naver?&where=news&query=%EC%A0%9C%EC%A3%BC%EB%8F%84%EA%B4%80%EA%B4%91&sort=0&field=1&ds=2015.05.01&de=2015.05.30&nso=so:r,p:from20150501to20150530&start=1&refresh_start=0\n",
-      "2015.05.01_complete!\n",
-      "making url https://search.naver.com/search.naver?&where=news&query=%EC%A0%9C%EC%A3%BC%EB%8F%84%EA%B4%80%EA%B4%91&sort=0&field=1&ds=2015.06.01&de=2015.06.30&nso=so:r,p:from20150601to20150630&start=1&refresh_start=0\n",
-      "2015.06.01_complete!\n",
-      "making url https://search.naver.com/search.naver?&where=news&query=%EC%A0%9C%EC%A3%BC%EB%8F%84%EA%B4%80%EA%B4%91&sort=0&field=1&ds=2015.07.01&de=2015.07.30&nso=so:r,p:from20150701to20150730&start=1&refresh_start=0\n",
-      "2015.07.01_complete!\n",
-      "making url https://search.naver.com/search.naver?&where=news&query=%EC%A0%9C%EC%A3%BC%EB%8F%84%EA%B4%80%EA%B4%91&sort=0&field=1&ds=2015.08.01&de=2015.08.30&nso=so:r,p:from20150801to20150830&start=1&refresh_start=0\n",
-      "2015.08.01_complete!\n",
-      "making url https://search.naver.com/search.naver?&where=news&query=%EC%A0%9C%EC%A3%BC%EB%8F%84%EA%B4%80%EA%B4%91&sort=0&field=1&ds=2015.09.01&de=2015.09.30&nso=so:r,p:from20150901to20150930&start=1&refresh_start=0\n",
-      "2015.09.01_complete!\n"
-     ]
     },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [30], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m saving_data(\u001b[38;5;241m2015\u001b[39m, \u001b[38;5;241m2021\u001b[39m)\n",
-      "Cell \u001b[0;32mIn [29], line 6\u001b[0m, in \u001b[0;36msaving_data\u001b[0;34m(start_year, end_year)\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m j \u001b[38;5;241m<\u001b[39m \u001b[38;5;241m10\u001b[39m:\n\u001b[1;32m      5\u001b[0m     j \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m0\u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;241m+\u001b[39m \u001b[38;5;28mstr\u001b[39m(j)\n\u001b[0;32m----> 6\u001b[0m df \u001b[38;5;241m=\u001b[39m \u001b[43mcrawl\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m제주도관광\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43mf\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m./news_data/\u001b[39;49m\u001b[38;5;132;43;01m{\u001b[39;49;00m\u001b[43mi\u001b[49m\u001b[38;5;132;43;01m}\u001b[39;49;00m\u001b[38;5;124;43m_\u001b[39;49m\u001b[38;5;132;43;01m{\u001b[39;49;00m\u001b[43mj\u001b[49m\u001b[38;5;132;43;01m}\u001b[39;49;00m\u001b[38;5;124;43m.xlsx\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43mf\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;132;43;01m{\u001b[39;49;00m\u001b[43mi\u001b[49m\u001b[38;5;132;43;01m}\u001b[39;49;00m\u001b[38;5;124;43m.\u001b[39;49m\u001b[38;5;132;43;01m{\u001b[39;49;00m\u001b[43mj\u001b[49m\u001b[38;5;132;43;01m}\u001b[39;49;00m\u001b[38;5;124;43m.01\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43mf\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;132;43;01m{\u001b[39;49;00m\u001b[43mi\u001b[49m\u001b[38;5;132;43;01m}\u001b[39;49;00m\u001b[38;5;124;43m.\u001b[39;49m\u001b[38;5;132;43;01m{\u001b[39;49;00m\u001b[43mj\u001b[49m\u001b[38;5;132;43;01m}\u001b[39;49;00m\u001b[38;5;124;43m.30\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[0;32mIn [22], line 25\u001b[0m, in \u001b[0;36mcrawl\u001b[0;34m(query, save_as, begin, end, sort, field, delay, timeout, page_limit)\u001b[0m\n\u001b[1;32m     23\u001b[0m \u001b[38;5;28;01mwhile\u001b[39;00m (current_index \u001b[38;5;241m<\u001b[39m\u001b[38;5;241m=\u001b[39m max_index) \u001b[38;5;129;01mand\u001b[39;00m (\u001b[38;5;241m1\u001b[39m \u001b[38;5;241m+\u001b[39m current_index \u001b[38;5;241m/\u001b[39m\u001b[38;5;241m/\u001b[39m \u001b[38;5;241m10\u001b[39m \u001b[38;5;241m<\u001b[39m\u001b[38;5;241m=\u001b[39m page_limit):\n\u001b[1;32m     24\u001b[0m     url \u001b[38;5;241m=\u001b[39m make_url(query, sort, field, begin, end, current_index)\n\u001b[0;32m---> 25\u001b[0m     bsobj \u001b[38;5;241m=\u001b[39m \u001b[43mmake_bsobj\u001b[49m\u001b[43m(\u001b[49m\u001b[43murl\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdelay\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtimeout\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtrial\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m10\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m     26\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmaking url\u001b[39m\u001b[38;5;124m'\u001b[39m, url)\n\u001b[1;32m     28\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m bsobj \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n",
-      "Cell \u001b[0;32mIn [15], line 7\u001b[0m, in \u001b[0;36mmake_bsobj\u001b[0;34m(url, delay, timeout, trial)\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mwhile\u001b[39;00m count \u001b[38;5;241m<\u001b[39m trial:\n\u001b[1;32m      6\u001b[0m     \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m----> 7\u001b[0m         \u001b[43mtime\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msleep\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdelay\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mrandom\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrandom\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      8\u001b[0m         html \u001b[38;5;241m=\u001b[39m urlopen(Request(url\u001b[38;5;241m=\u001b[39murl, headers\u001b[38;5;241m=\u001b[39m{\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mUser-Agent\u001b[39m\u001b[38;5;124m'\u001b[39m: ua\u001b[38;5;241m.\u001b[39mrandom}), timeout\u001b[38;5;241m=\u001b[39mtimeout)\n\u001b[1;32m      9\u001b[0m         bsobj \u001b[38;5;241m=\u001b[39m BeautifulSoup(html, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mlxml\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    }
-   ],
+    "scrolled": true
+   },
+   "outputs": [],
    "source": [
-    "saving_data(2015, 2021)"
+    "saving_data(2015, 2015)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3700bf4f",
+   "id": "bbdc8254",
    "metadata": {},
    "outputs": [],
    "source": []
