ADD: Example dataframe to show

--- a/Naver_news_crawling.ipynb
+++ b/Naver_news_crawling.ipynb
@@ -503,6 +503,128 @@
    "source": [
     "saving_data(2020, 2021)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "25ca2489",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>naver_news_title</th>\n",
+       "      <th>naver_news_articles</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>제주도관광협회장 선거, 직선제를 제안합니다</td>\n",
+       "      <td>제주도관광협회장 선거, 직선제를 제안합니다 - 헤드라인제주 × 전체기사 정치/행정 ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>제주도 올해 크루즈 관광객 65만명 유치</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>제주도맛집 세계 관광객들의 눈길을 끌다</td>\n",
+       "      <td>제주도맛집 세계 관광객들의 눈길을 끌다 - 이뉴스투데이 × 전체기사 금융 전체 정책...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>제주도가 융자 지원하는 관광진흥기금 인기 높다</td>\n",
+       "      <td>제주도가 융자 지원하는 관광진흥기금 인기 높다-국민일보 시사 시사 &gt; 전체기사 제주...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>제주도 관광진흥기금 2728억원 신청…융자액의 3배</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>제주도관광협회, 일본관광시장 활성화 대책 협의회 가동</td>\n",
+       "      <td>제주도관광협회, 일본관광시장 활성화 대책 협의회 가동 - 헤드라인제주 × 전체기사 ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>제주도관광협회 제33대 회장 선거 공고</td>\n",
+       "      <td>제주도관광협회 제33대 회장 선거 공고 &lt; 관광 &lt; 생활경제 &lt; 기사본문 - 제주도...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>제주도, 관광지 사육동물 격리 구제역 차단</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>국토부·제주도, 손잡고 제주 원도심 녹색관광도시로 만든다</td>\n",
+       "      <td>국토부·제주도, 손잡고 제주 원도심 녹색관광도시로 만든다 × 로그인 회원가입 전체기...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>제주도 “올 국내외 관광객 1300만명 유치”</td>\n",
+       "      <td>제주도 “올 국내외 관광객 1300만명 유치” | 세계일보 스포츠월드 세계비즈 세계...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  naver_news_title  \\\n",
+       "0          제주도관광협회장 선거, 직선제를 제안합니다   \n",
+       "1           제주도 올해 크루즈 관광객 65만명 유치   \n",
+       "2            제주도맛집 세계 관광객들의 눈길을 끌다   \n",
+       "3        제주도가 융자 지원하는 관광진흥기금 인기 높다   \n",
+       "4     제주도 관광진흥기금 2728억원 신청…융자액의 3배   \n",
+       "5    제주도관광협회, 일본관광시장 활성화 대책 협의회 가동   \n",
+       "6            제주도관광협회 제33대 회장 선거 공고   \n",
+       "7          제주도, 관광지 사육동물 격리 구제역 차단   \n",
+       "8  국토부·제주도, 손잡고 제주 원도심 녹색관광도시로 만든다   \n",
+       "9        제주도 “올 국내외 관광객 1300만명 유치”   \n",
+       "\n",
+       "                                 naver_news_articles  \n",
+       "0  제주도관광협회장 선거, 직선제를 제안합니다 - 헤드라인제주 × 전체기사 정치/행정 ...  \n",
+       "1                                                NaN  \n",
+       "2  제주도맛집 세계 관광객들의 눈길을 끌다 - 이뉴스투데이 × 전체기사 금융 전체 정책...  \n",
+       "3  제주도가 융자 지원하는 관광진흥기금 인기 높다-국민일보 시사 시사 > 전체기사 제주...  \n",
+       "4                                                NaN  \n",
+       "5  제주도관광협회, 일본관광시장 활성화 대책 협의회 가동 - 헤드라인제주 × 전체기사 ...  \n",
+       "6  제주도관광협회 제33대 회장 선거 공고 < 관광 < 생활경제 < 기사본문 - 제주도...  \n",
+       "7                                                NaN  \n",
+       "8  국토부·제주도, 손잡고 제주 원도심 녹색관광도시로 만든다 × 로그인 회원가입 전체기...  \n",
+       "9  제주도 “올 국내외 관광객 1300만명 유치” | 세계일보 스포츠월드 세계비즈 세계...  "
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_excel('./news_data/2015_01.xlsx', index_col='Unnamed: 0')\n",
+    "df.head(10)"
+   ]
   }
  ],
  "metadata": {
@@ -521,7 +643,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
